welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:26: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:29: error: expected start of definition
	override def forward()  {
                 ^ZigZag:32: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:35: error: expected start of definition
	override def backward() {
                 ^ZigZag:38: error: Unmatched closing brace '}' ignored here
}
^